# brot3

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MAINTENANCE.md  README.md  cliff.toml  clippy.toml  deny.toml  rust-toolchain.toml  workspace-structure.dot
.cargo/: config.toml
.github/: codecov.yml  dependabot.yml
.github/actions/ui_build_prep/: action.yml
.github/workflows/: build.yml  ci-dev.yml  ci-main.yml  ci.yml  package.yml  release-main.yml  release.yml  rust.yml  tauri-ci.yml
benches/: colourer.rs  fractal.rs  iai.rs  initial.rs  lib.rs  palette.rs  plot.rs  results.md
big_complex/: Cargo.toml
big_complex/src/: big_complex.rs  big_vec2.rs  lib.rs
builder/: Cargo.toml
builder/src/: main.rs
cli/: Cargo.toml
cli/src/: lib.rs  list.rs  main.rs  plot.rs  show.rs  styles.rs
engine/: Cargo.toml
engine/benches/: engine.rs  iai.rs  lib.rs  results.md
engine/src/: cli.rs  colouring.rs  fractal.rs  lib.rs  render.rs  util.rs
engine/src/cli/: plot.rs
engine/src/colouring/: direct_rgb.rs  framework.rs  huecycles.rs  mod.rs  testing.rs
engine/src/fractal/: experimental.rs  framework.rs  mandelbrot.rs  mandeldrop.rs  maths.rs  misc_fractals.rs  mod.rs  pointdata.rs  tile.rs  tile_cache.rs  tilespec.rs  userplotspec.rs
engine/src/render/: ascii.rs  framework.rs  mod.rs  png.rs
engine/src/util/: filename.rs  float_format.rs  listable.rs  mod.rs  rect.rs
engine3/builder/: Cargo.toml
engine3/builder/src/: main.rs
engine3/common/: Cargo.toml
engine3/common/src/: lib.rs
engine3/shader/: Cargo.toml
engine3/shader/src/: lib.rs
engine3/shared/: Cargo.toml
engine3/shared/src/: lib.rs
engine3/shared/src/push_constants/: shader.rs
icons/: icon.icns
runner/: Cargo.toml  build.rs
runner/src/: lib.rs
scripts/: coverage
shader/: Cargo.toml
shader/benches/: shader.rs
shader/shared/: Cargo.toml
shader/shared/src/: lib.rs
shader/shared/src/push_constants/: mod.rs  shader.rs
shader/src/: colour.rs  exponentiation.rs  fractal.rs  lib.rs
shader_builder/: Cargo.toml
shader_builder/src/: main.rs
shader_common/: Cargo.toml
shader_common/src/: data.rs  enums.rs  lib.rs
shader_util/: Cargo.toml
shader_util/benches/: colour_conversion.rs
shader_util/src/: big_complex.rs  big_vec2.rs  colourspace.rs  grid.rs  lib.rs
src/: cli.rs  colouring.rs  fractal.rs  lib.rs  render.rs  util.rs
src/cli/: list.rs  plot.rs  styles.rs
src/colouring/: direct_rgb.rs  framework.rs  huecycles.rs  testing.rs  types.rs
src/fractal/: framework.rs  mandelbrot.rs  mandeldrop.rs  maths.rs  misc_fractals.rs  plotdata.rs  plotspec.rs  pointdata.rs  tile.rs  tilespec.rs  userplotdata.rs  userplotspec.rs
src/render/: ascii.rs  framework.rs  png.rs
src/util/: filename.rs  listable.rs  rect.rs  size.rs
ui/: Cargo.toml  build.rs  index.html  package.json  tsconfig.json  vite.config.ts
ui/misc/: Info.plist.tmpl  brot3.desktop
ui/src/: about.ts  cli.rs  components.rs  dom_util.ts  engine.rs  engine_types.ts  error_handler.ts  hud.ts  image_button.tsx  info.rs  lib.rs  loader.rs  main.rs  main.ts  max_iter.ts  menu.css  menu.rs  menu.ts  modal-react.tsx  modal.css  openseadragon.d.ts  save_size.ts  selection_overlay.css  selection_overlay.ts  selection_overlay.tsx  serial_allocator.ts  style.css  types.rs  version.rs  viewer.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: jobs.rs  main.rs  menu.rs  mutable_util.rs  render_spec.rs  save_image.rs  tile_bridge.rs  util.rs  viewertilespec.rs
ui/src/controller/: about.rs  controls.rs  coords.rs  keyboard.rs  menu.rs  mod.rs  small_windows.rs  ui.rs
ui/src/widgets/: checkablebutton.rs  mod.rs
ui/ui/: about.slint  info.slint  mainui.slint  menu.slint
ui3/: Cargo.toml  build.rs
ui3/src/: cli.rs  lib.rs
ui3/src/controller/: keyboard.rs  mod.rs  ui.rs
util/: Cargo.toml
util/src/: big_complex.rs  big_vec2.rs  dynfmt.rs  lib.rs
xtask/: Cargo.toml
xtask/src/: changelog.rs  debian.rs  main.rs  util.rs
