[workspace]
members = ["cli", "engine", "ui"]
resolver = "2"
package.edition = "2024"
package.authors = ["Ross Younger <crazyscot@gmail.com>"]
package.version = "3.0.0-wip"
package.license = "AGPL-3.0-or-later"

# note: rust-cache turns off incremental builds, so we don't need a profile mod for CI.

[profile.release]
# See https://nnethercote.github.io/perf-book/build-configuration.html
codegen-units = 1
lto = "thin"
strip = "debuginfo"
#incremental = false # implicit by rust-cache

[profile.bench]
strip = false
debug = true

[workspace.dependencies]
anyhow = "1.0"
clap = "4.5"
num-complex = "0.4"
png = "0.17.16"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"

[workspace.lints.rust]
dead_code = "warn"
elided_lifetimes_in_paths = "deny"
meta_variable_misuse = "deny"
missing_abi = "deny"
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
missing_docs = "warn"
non_ascii_idents = "deny"
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "deny"
# unused_crate_dependencies = "deny" # false positives
unused_extern_crates = "deny"
unused_lifetimes = "deny"
unused_results = "deny"
variant_size_differences = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
