[workspace]
members = ["shader_common", "shader", "shader_builder", "shader_util", "ui3"]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["Ross Younger <crazyscot@gmail.com>"]
version = "3.0.0-wip"
license = "MIT"

# note: rust-cache turns off incremental builds, so we don't need a profile mod for CI.

[profile.release]
# See https://nnethercote.github.io/perf-book/build-configuration.html
codegen-units = 1
lto = "thin"
strip = "debuginfo"
#incremental = false # implicit by rust-cache

[profile.bench]
strip = false
debug = true

[workspace.dependencies]
bytemuck = { version = "1.24.0", default-features = false }
glam = { version = "=0.30.7", default-features = false }
#png = "0.18.0"

[workspace.dependencies.spirv-std]
git = "https://github.com/Rust-GPU/rust-gpu"
rev = "df1628a032d22c864397417c2871b74d602af986"

[workspace.dependencies.spirv-builder]
git = "https://github.com/Rust-GPU/rust-gpu"
rev = "df1628a032d22c864397417c2871b74d602af986"

[workspace.dependencies.easy-shader-runner]
git = "https://github.com/abel465/easy-shader-runner"
rev = "8f323c451c3a05d592ba6b2eba4f40bf117c2991"
default-features = false

[workspace.lints.rust]
dead_code = "warn"
elided_lifetimes_in_paths = "deny"
meta_variable_misuse = "deny"
missing_abi = "deny"
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
missing_docs = "warn"
non_ascii_idents = "deny"
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "deny"
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(coverage_nightly)'] }
# unused_crate_dependencies = "deny" # false positives
unused_extern_crates = "deny"
unused_lifetimes = "deny"
unused_results = "deny"
variant_size_differences = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
