[package]
name = "brot3-cli"
edition.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true
rust-version = "1.89"

[lints]
workspace = true

[dependencies]
brot3-engine = { path = "../engine" }
anyhow = { workspace = true }
anstyle = "1.0.13"
clap = { workspace = true, features = ["wrap_help", "derive"] }
rayon = { workspace = true }
strum = { workspace = true }
