[package]
name = "brot3-engine"
edition.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true
description = "Yet Another Fractal Plotter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["wrap_help", "derive"] }
enum_delegate = "0.2.0"
heck = "0.4.1"
ndarray = "0.15.6"
num-complex = "0.4.5"
palette = "0.7.5"
png = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

[dev-dependencies]
approx = "0.5.1"
criterion = { version = "0.5", features = ["html_reports"] }
iai-callgrind = "0.10.2"
rayon = { workspace = true }

[[bench]]
name = "engine"
harness = false

[[bench]]
name = "iai"
harness = false
