[package]
name = "brot3-engine"
edition.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true
description = "Yet Another Fractal Plotter"
rust-version = "1.74.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["wrap_help", "derive"] }
enum_delegate = "0.2.0"
heck = "0.5.0"
num-complex = { workspace = true }
palette = "0.7.6"
png = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

[dev-dependencies]
approx = "0.5.1"
criterion = { version = "0.7", features = ["html_reports"] }
iai-callgrind = "=0.16.1"

[[bench]]
name = "engine"
harness = false

[[bench]]
name = "iai"
harness = false

[build-dependencies]
built = { version = "0.8.0", features = ["git2"] }
