[package]
name = "brot3-engine"
edition.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true
description = "Yet Another Fractal Plotter"
rust-version = "1.89"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
derive_more = { version = "2.0.1", features = ["constructor"] }
heck = "0.5.0"
num-complex.workspace = true
palette = "0.7.6"
png.workspace = true
rayon = "1.11.0"
spire_enum = "0.6.0"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"

[dev-dependencies]
approx = "0.5.1"
criterion = { version = "0.7", features = ["html_reports"] }
iai-callgrind = "=0.16.1"

[[bench]]
name = "engine"
harness = false

[[bench]]
name = "iai"
harness = false

[build-dependencies]
built = { version = "0.8.0", features = ["git2"] }
