[package]
name = "shader"
description = "brot3's GPU shader"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["dylib"]
test = false

[features]
emulate_constants = []

[dependencies]
spirv-std = { workspace = true }
shader_common = { path = "../shader_common" }
shader_util = { path = "../shader_util" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_arch, values("spirv"))'] }
