[package]
name = "shader_builder"
description = "Builds the brot3 shader crate (optionally, at runtime with hot reload)"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license = "MIT"

[[bin]]
name = "shader_builder"
test = false
bench = false

[dependencies]
spirv-builder.workspace = true
