[package]
name = "shader_builder"
description = "Builds the brot3 shader crate"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license = "MIT"

[[bin]]
name = "shader_builder"
test = false
bench = false
doc = false

[dependencies]
anyhow = { workspace = true }
spirv-builder.workspace = true
