[package]
name = "shader_common"
description = "Common types shared by the brot3 shader and UI crates"
authors = ["Ross Younger <crazyscot@gmail.com>"]
publish = false
version.workspace = true
license.workspace = true
edition.workspace = true

[lib]
bench = false

[dependencies]
shader_util = { path = "../shader_util" }

[target.'cfg(target_arch = "spirv")'.dependencies]
glam = { workspace = true }
abels-complex = { workspace = true, features = ["libm", "glam"] }
spirv-std = { workspace = true }

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
abels-complex = { workspace = true, features = ["std", "glam"] }
bytemuck = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = ["derive"] }
glam = { workspace = true, features = ["bytemuck"] }
num-derive = "0.4.2"
num-traits = { version = "0.2.19", default-features = false }
strum = { version = "0.27.2", default-features = false, features = ["derive"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_arch, values("spirv"))',
    'cfg(coverage_nightly)',
] }

[dev-dependencies]
pretty_assertions = { workspace = true }
