[package]
name = "shader_util"
description = "Helper types for GPU shader crates"
authors = ["Ross Younger <crazyscot@gmail.com>", "Abel <abel465@gmail.com>"]
license = "MIT"
version = "0.3.0"
edition.workspace = true

[lib]
bench = false

[dependencies]
bytemuck = { workspace = true, default-features = false, features = ["derive"] }
document-features = "0.2.12"

[target.'cfg(target_arch = "spirv")'.dependencies]
spirv-std = { workspace = true }

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
glam = { workspace = true, default-features = false, features = ["bytemuck"] }

[dev-dependencies]
glam = { workspace = true, default-features = false, features = ["std"] }

[lints]
workspace = true
