[package]
name = "brot3"
default-run = "brot3"
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
rust-version = "1.89"

[dependencies]
brot3-engine = { path = "../engine" }
anyhow = { workspace = true }
num-complex = { workspace = true }
rayon = { workspace = true }
slint = "1.12"
image = { version = "0.25", default-features = false, features = [ "png" ] }
tokio = { version = "1.47", features = ["full"] }

[build-dependencies]
slint-build = "1.12"
vivi_ui = "0.2"

[lints]
workspace = true
