[package]
name = "brot3-ui"
description = "Interactive fractal explorer"
publish = false
default-run = "brot3"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "brot3"
test = false
doc = false
bench = false

[lib]
test = false
doc = false
doctest = false
bench = false

[features]
default = ["hot-reload-shader"]
runtime-compilation = ["easy-shader-runner/runtime-compilation"]
hot-reload-shader = ["easy-shader-runner/hot-reload-shader"]

[dependencies]
anyhow = { workspace = true }
bytemuck = { workspace = true }
cfg-if = "1.0.4"
clap = { workspace = true, features = ["derive"] }
egui_extras = { version = "0.33", features = ["image"] }
glam = { workspace = true }
image = { version = "0.25.8", features = ["png"], default-features = false }
log = "0.4.28"
num-traits = { version = "0.2.19", default-features = false }
shader = { path = "../shader" }
shader_common = { path = "../shader_common" }
strum = { version = "0.27.2", default-features = false, features = ["std"] }
util = { path = "../util" }
web-time = "1.1.0"

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
easy-shader-runner = { workspace = true, default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.55"
easy-shader-runner = { workspace = true, default-features = false, features = [
  "emulate_constants",
] }

[build-dependencies]
built = { version = "0.8", features = ["git2"] }
cfg_aliases = "0.2.1"

[package.metadata.deb]
name = "brot3"
default-features = false # no runtime compilation
section = "mathematics"
extended-description = """\
An interactive fractal explorer that uses the GPU.
"""
assets = [
  [
    "target/release/brot3",
    "usr/bin/",
    "755",
  ],

  [
    "../README.md",
    "usr/share/doc/brot3/",
    "644",
  ],
  [
    "../LICENSE",
    "usr/share/doc/brot3/",
    "644",
  ],
  [
    "../target/misc/changelog.md.gz",
    "usr/share/doc/brot3/",
    "644",
  ],
  [
    "../target/misc/changelog.Debian.gz",
    "usr/share/doc/brot3/",
    "644",
  ],
  [
    "../icons/128x128@2x.png",
    "usr/share/icons/brot3.png",
    "644",
  ],
  [
    "misc/brot3.desktop",
    "usr/share/applications/",
    "644",
  ],
]

[package.metadata.bundle.bin.brot3]
name = "brot3"
identifier = "com.crazyscot.brot3"
icon = ["icons/*"]
category = "GraphicsAndDesign"
# Don't forget to run cargo bundle --no-default-features ...
# N.B. README, etc, do not live in the bundle; they travel outboard as nobody ever looks inside the .app
