[package]
name = "brot3-ui"
description = "Interactive fractal explorer"
publish = false
default-run = "brot3"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
test = false
doctest = false

[[bin]]
name = "brot3"
test = false
doc = false


[features]
default = ["hot-reload-shader"]
runtime-compilation = ["easy-shader-runner/runtime-compilation"]
hot-reload-shader = ["easy-shader-runner/hot-reload-shader"]

[dependencies]
cfg-if = "1.0.0"
shader_common = { path = "../shader_common" }
structopt = { version = "0.3.26", default-features = false }
bytemuck = { workspace = true }
glam = { workspace = true }
shader_util = { version = "0.1.0", path = "../shader_util" }
web-time = "1.1.0"

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
easy-shader-runner = { workspace = true, default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
easy-shader-runner = { workspace = true, default-features = false, features = [
  "emulate_constants",
] }
