[package]
name = "brot3-ui"
description = "Interactive fractal explorer"
publish = false
default-run = "brot3"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
test = false
doctest = false
bench = false

[[bin]]
name = "brot3"
test = false
doc = false
bench = false


[features]
default = ["hot-reload-shader"]
runtime-compilation = ["easy-shader-runner/runtime-compilation"]
hot-reload-shader = ["easy-shader-runner/hot-reload-shader"]

[dependencies]
cfg-if = "1.0.3"
bytemuck = { workspace = true }
glam = { workspace = true }
shader_common = { path = "../shader_common" }
shader_util = { path = "../shader_util" }
strum = { version = "0.27.2", default-features = false, features = ["std"] }
web-time = "1.1.0"
num-traits = { version = "0.2.19", default-features = false }

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
easy-shader-runner = { workspace = true, default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.54"
easy-shader-runner = { workspace = true, default-features = false, features = [
  "emulate_constants",
] }
