[package]
name = "xtask"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
derive_more = { version = "2.0.1", features = ["constructor"] }
flate2 = "1.1.2"
pico-args = "0.5.0"
#xshell = "0.2.7"

[lints]
workspace = true

[[bin]]
name = "xtask"
test = false
bench = false
doc = false
