[package]
name = "engine3_common"
description = "Common types shared by the brot3 shader and UI crates"
authors = ["Ross Younger <crazyscot@gmail.com>"]
publish = false
version.workspace = true
license.workspace = true
edition.workspace = true

[lib]
test = false
doctest = false

[dependencies]
shader_util = { path = "../../shader_util" }
spirv-std = { workspace = true }

[target.'cfg(target_arch = "spirv")'.dependencies]
glam = { workspace = true }
abels-complex = { version = "0.2.0", default-features = false, features = ["libm", "glam"] }

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
glam = { workspace = true, features = ["bytemuck"] }
bytemuck = { workspace = true, features = ["derive"] }
abels-complex = { version = "0.2.0", default-features = false, features = ["std", "glam"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_arch, values("spirv"))'] }
