[package]
name = "brot3"
description = "Yet Another Fractal Plotter"
repository = ""
default-run = "brot3"
edition.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true
rust-version = "1.74.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
brot3-engine = { path = "../../engine" }
anyhow = { workspace = true }
bytes = { version = "1", features = ["serde"] }
serde_json = "1.0"
serde = { workspace = true }
tauri = { version = "1.6.7", features = [ "dialog-message", "path-all", "dialog-save", "window-set-title"] }
rustc-hash = "1.1.0"
tokio = "1.38.0"
tokio-macros = "2.3.0"
rayon.workspace = true

[dev-dependencies]
approx = "0.5.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
